Update swagger component, using parameter file

--- a/delila-parameter.conf
+++ b/delila-parameter.conf
@@ -1,4 +1,7 @@
-DELILA-IP 172.18.4.77
+DELILA-IP 172.18.6.59
 DELILA-Port 30000
 MongoDB-Address mongodb://delila:eli-np@127.0.0.1
 MongoDB-Database DELILA
+# IP and port for this server
+Server-IP 172.18.4.56
+Server-Port 8000
